<resources>
    <string name="app_name">Book Store</string>
    <string name="dashboard">DashBoard</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="about_phone">About Phone</string>
    <string name="book_hub">BOOK HUB</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="open_settings">Open Setting</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_5">4.5</string>
    <string name="about_the_book">About the book:</string>
    <string name="add_to_favourites">Add to Favourites</string>
</resources>