<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/description_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_toolbar"
        android:layout_marginTop="20dp"
        android:id="@+id/scroll_desc"
        android:layout_above="@id/btnAddToFav">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="6">

                <!--The weight sum property is used to divide the layout into
                different parts and then giving each layout a particular weight
                gives it that amount of space on the screen-->


                <!--Since each parent layout will have a specific weight, we need
                not give any width to those layout-->

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/ic_launcher_round" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3"
                    >

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/name_of_the_book"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:maxLines="1"
                        />

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookName"
                        android:padding="8dp"
                        android:text="@string/name_of_the_author"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookAuthor"
                        android:padding="8dp"
                        android:text="@string/rs_299"
                        android:textColor="#357a38"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <!--Many times we see that texts have an image along with them to
                their right or left. This is added with the help of the
                drawableLeft (or drawableRight and so on) attribute-->

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:text="@string/_4_5"
                    android:textColor="#ffca28"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_rating">

                </TextView>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llContent">

                <TextView
                    android:id="@+id/txtAboutTheBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAboutTheBook"
                    android:layout_margin="10dp"
                    android:padding="6dp"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/add_to_favourites"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</RelativeLayout>